--- a/css/media-query.css
+++ b/css/media-query.css
@@ -109,6 +109,11 @@
     /* border: 2px solid red; */
     position: relative;
     padding-bottom: 100px;
+    background: linear-gradient(
+      to bottom,
+      var(--gd-vd-gray-blue) 0%,
+      var(--gd-vd-desaturated-blue) 100%
+    );
   }
 
   .state-pattern-wrapper {
@@ -119,14 +124,14 @@
     top: -12%;
     left: 0;
     right: 0;
-    width: 100%; 
+    width: 100%;
     height: auto;
   }
-  
 
   .state-left-container {
     position: absolute;
     top: -320px;
+    z-index: 1;
   }
 
   .state-right-container {
@@ -393,8 +398,9 @@
     top: -30%;
     left: -20%;
     right: 0;
-    width: 150%; 
+    width: 150%;
     height: auto;
+    /* clip-path: polygon(0 0, 55% 0, 100% 100%, 0 100%); */
   }
 }
 
